# Instrument-Cluster

./: README.md  ic.sh
IC_someip/: CMakeLists.txt  ICStubImpl.cpp  SpeedText.qml  battery.cpp  battery_gauge.cpp  batteryupdate.cpp  gear.cpp  gear.h  get_battery.h  lrsign.h  main.cpp  mode.cpp  mode.h  qml.qrc  sender.cpp  speed.h
fidl/: IC.fdepl  IC.fidl  IC_inter.fdepl
files/IC_someip/: commonapi4someip.ini  srcgen.sh
files/IC_someip/IC_someip/: Dial.qml  DialSet.qml  ICStubImpl.h  Needle.qml  battery.h  battery_gauge.h  batteryupdate.h  get_battery.cpp  ic_interstubimpl.cpp  ic_interstubimpl.h  lrsign.cpp  main.qml  pdc.cpp  pdc.h  piracer_control.cpp  receiver.cpp  receiver.h  sender.h  speed.cpp  vehiclecomponents.cpp  vehiclecomponents.h
files/IC_someip/fidl/: IC.fdepl  IC.fidl  IC_inter.fidl
files/IC_someip/json/: IC.json
files/IC_someip/src-gen-inter/core/v0/commonapi/: IC_inter.hpp  IC_interStubDefault.hpp
files/IC_someip/src-gen-inter/someip/v0/commonapi/: IC_interSomeIPCatalog.json  IC_interSomeIPStubAdapter.cpp  IC_interSomeIPStubAdapter.hpp
files/IC_someip/src-gen/core/v0/commonapi/: ICProxyBase.hpp
files/IC_someip/src-gen/someip/v0/commonapi/: ICSomeIPCatalog.json  ICSomeIPProxy.cpp  ICSomeIPProxy.hpp  ICSomeIPStubAdapter.cpp
json/: change_ip.py  set_ip.sh
src-gen-inter/core/v0/commonapi/: IC_interProxy.hpp  IC_interProxyBase.hpp  IC_interStub.hpp
src-gen-inter/someip/v0/commonapi/: IC_interSomeIPDeployment.cpp  IC_interSomeIPDeployment.hpp  IC_interSomeIPProxy.cpp  IC_interSomeIPProxy.hpp
src-gen/core/v0/commonapi/: IC.hpp  ICProxy.hpp  ICStub.hpp  ICStubDefault.hpp
src-gen/someip/v0/commonapi/: ICSomeIPDeployment.cpp  ICSomeIPDeployment.hpp  ICSomeIPStubAdapter.hpp
